# idt_pipeline

./: README.md  start_training.m~
IDT/IDT_ExternalFlow/: CMakeLists.txt  README.md  featureExtractor.sh
IDT/IDT_ExternalFlow/include/: DenseTrackStab.h  Descriptors.h  Initialize.h  Initialize_Sep.h  OpticalFlow.h
IDT/IDT_ExternalFlow/src/: DenseTrackStab.cpp
IDT/IDT_Original/: CMakeLists.txt  README.md  featureExtractor.sh
IDT/IDT_Original/include/: Descriptors.h  Initialize.h  OpticalFlow.h
IDT/IDT_Original/src/: DenseTrackStab.cpp
IDT_CodeBook/: compute_binary_class_index.m  compute_confusion_mat.m  compute_fvt.m  extract_dtf_feats.m  extract_dtf_feats_.m  gmm_gen_codebook.m  import_idt.m  import_idt_hog3d.m  output.m  pretrain.m  start_codebook.m  start_training.m  subsample.m
IDT_CodeBook/libsvm/matlab/: libsvmread.mexw64  libsvmwrite.mexw64  svmpredict.mexa64  svmpredict.mexw64  svmtrain.mexa64  svmtrain.mexw64
IDT_CodeBook/vgg_fisher/+featpipem/+lib/: annkmeans.m
IDT_CodeBook/vlfeat-0.9.20/toolbox/: vl_setup.m
